--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 <body>
   <h1>Welcome</h1>
-  <input type='text' ></input>
+  <h3>Username:</h3>
+  <input type='text'></input>
+  <h3>Password</h3>
+  <input type='text'></input>
 </body>
 </html>
