--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset='utf-8'>
 
+  <script type='text/javascript' src='index.js'></script>
   <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script>
   <script>
     // Initialize Firebase
     var config = {
