--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <h3>Password</h3>
   <input type='text'></input>
   <p id='username-display'></p>
+  <p>change</p>
 
   <script type='text/javascript' src='index.js'></script>
 </body>
